手動でマルチキャスト

--- a/rtmp/conf/nginx_single.conf
+++ b/rtmp/conf/nginx_single.conf
@@ -13,23 +13,11 @@ rtmp {
             record off;
             meta copy;
             allow publish all;          # RTMP push 許可
-            allow play 127.0.0.1;       # RTMP pull 有効(ffmpegに対して)
+            deny play all;              # RTMP pull 無効
 
             # HLS 配信用ファイルを保存する
-            # hls on;
-            # hls_type event;
-            # hls_path /var/local/www/hls/;
-            # hls_fragment 3;
-            # hls_playlist_length 60;
-        }
-
-        application live2 {
-            live on;
-            record off;
-            allow publish 127.0.0.1;
-            deny play all;
-
             hls on;
+            hls_type event;
             hls_path /var/local/www/hls/;
             hls_fragment 3;
             hls_playlist_length 60;
