--- a/rtmp/conf/nginx.conf
+++ b/rtmp/conf/nginx.conf
@@ -15,22 +15,30 @@ rtmp {
             allow publish all;          # RTMP push 許可
             allow play 127.0.0.1;       # RTMP pull 有効(ffmpegに対して)
 
-            # HLS 配信用ファイルを保存する
-            # hls on;
-            # hls_type event;
-            # hls_path /var/local/www/hls/;
-            # hls_fragment 3;
-            # hls_playlist_length 60;
+            # 変換コマンド
+            exec ffmpeg -re -i rtmp://localhost/${app}/${name} -codec:v libx264 -g 3 -f flv rtmp://localhost/stream1/${name};
+            exec ffmpeg -re -i rtmp://localhost/${app}/${name} -codec:v libx264 -g 3 -f flv rtmp://localhost/stream2/${name};
         }
 
-        application live2 {
+        application stream1 {
             live on;
             record off;
             allow publish 127.0.0.1;
             deny play all;
 
             hls on;
-            hls_path /var/local/www/hls/;
+            hls_path /var/local/www/hls/stream1;
+            hls_fragment 3;
+            hls_playlist_length 60;
+        }
+        application stream2 {
+            live on;
+            record off;
+            allow publish 127.0.0.1;
+            deny play all;
+
+            hls on;
+            hls_path /var/local/www/hls/stream2;
             hls_fragment 3;
             hls_playlist_length 60;
         }
